Fixed link contrast issue in header when zoomed

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -233,7 +233,7 @@ body.dark-theme {
   & .page-content, & .site-header, & .site-footer, & .switch-btn {
     background-color: #1a2a2a;
     color: #eee;
-    a, .site-title, p, .post-meta, .switch-btn {
+    a, .site-title, p, .post-meta, .switch-btn, .page-link {
       color: #eee;
     }
   }
